añadir archivo catalogo.jsp y estilos.css para que se vea una mejor interfaz